# NG_2024_Pashchenko_Danil_Qt_C-

./: README.md
Lection 1 Task 1/Lecction_1_Task_1/: CMakeLists.txt  main.cpp
Lection 1 Task 1/build-Lecction_1_Task_1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lection 1 Task 1/build-Lecction_1_Task_1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-35734cb7968dbcb45da3.json  cmakeFiles-v1-170a41c9b299d9339156.json  codemodel-v2-cc2b057d85fbc5338c9e.json  directory-.-Debug-8f7bbe2a240cbeb4029b.json  index-2024-02-02T23-00-15-0048.json  target-Lecction_1_Task_1-Debug-ab195db02e293d78e84d.json
Lection 1 Task 2/Lection_1_Task_2/: main.cpp
Lection 1 Task 3/Lection_1_Task_3/: CMakeLists.txt  main.cpp
Lection 1 Task 3/build-Lection_1_Task_3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Lection 1 Task 3/build-Lection_1_Task_3-Desktop_Qt_6_6_1_MinGW_64_bit-Profile/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Lection 2 Task 1/Lection_2_Task_1/: main.cpp
Lection 2 Task 2/Lection_2_Task_2/: main.cpp
Lection 2 Task 3/Lection_2_Tasks_3/: main.cpp
Lection 2 Task 5/Lection_2_Task_5/: main.cpp
Lection 2 Task 6/Lection_2_Task_6/: main.cpp
Lection 3 Task 1/CryptographerQMAKE/: CryptographerQMAKE.pro  cryptographer.cpp  cryptographer.h  cryptographer.ui  main.cpp
(+13 files in other folders)
